--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <h1>BMI Calculator</h1>
     <input type="text" id="height" placeholder="How many centimeters?">
     <input type="text" id="weight" placeholder="How many Kilo"></br>
-    <button onclick="calculateBMI()">Calculate</button>
+    <button id="Calculate" onclick="calculateBMI()">Calculate</button>
     
     <div id="results"></div>
     </center>
