updated css and some spelling error in bmiUI.js file

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <center>
+    <img src="https://ak7.picdn.net/shutterstock/videos/1032007/thumb/11.jpg">
     <h1>BMI Calculator</h1>
     <input type="text" id="height" placeholder="How many centimeters?">
     <input type="text" id="weight" placeholder="How many Kilo"></br>
