--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,11 @@
     <center>
     <img src="assets/img/11.jpg">
     <h1>BMI Calculator</h1>
+    <div class="form">
     <input type="text" id="height" placeholder="How many centimeters?">
     <input type="text" id="weight" placeholder="How many Kilo"></br>
     <button id="Calculate" onclick="calculateBMI()">Calculate</button>
+    </div>
     
     <div id="results"></div>
     </center>
