--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <h1>BMI Calculator</h1>
     <div class="form">
     <input type="text" id="height" placeholder="How many centimeters?">
-    <input type="text" id="weight" placeholder="How many Kilo"></br>
+    <input type="text" id="weight" placeholder="How many kilos?"></br>
     <button id="Calculate" onclick="calculateBMI()">Calculate</button>
     </div>
     
